added transaction controller (no JWT)

--- a/src/main/resources/templates/createUser.html
+++ b/src/main/resources/templates/createUser.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Thymeleaf Variables</title>
+    <title>Создание нового пользователя</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
 </head>
 <body>
